--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,48 @@
-html,
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Syncopate:wght@400;700&display=swap');
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+*,
+*::before,
+*::after {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    /* font-family: 'Inter', sans-serif; */
+}
+
 body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+    overflow-x: hidden;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+body {
+    background: #000000;
+    color: #fff;
 }
 
-* {
-  box-sizing: border-box;
+@layer components {
+    .container {
+        @apply mx-auto max-w-full px-5 md:px-6 xl:max-w-[1280px];
+    }
+    .mobile_nav_gradient {
+        background: linear-gradient(to right, rgba(0, 0, 0, 0.6) 80%, transparent 20%);
+        --tw-backdrop-blur: blur(12px);
+        backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness)
+            var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate)
+            var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate)
+            var(--tw-backdrop-sepia);
+    }
+    .mobile_nav_transparent {
+        background: linear-gradient(transparent, transparent) !important;
+    }
+
+    .heading_md {
+        @apply uppercase font-syncopate font-bold text-3xl tracking-wider;
+    }
+    .spacing_p {
+        @apply uppercase text-xs tracking-[6px] text-[#EFEFFD];
+    }
 }
