--- a/styles/globals.css
+++ b/styles/globals.css
@@ -23,6 +23,16 @@ body {
     color: #fff;
 }
 
+@layer utilities {
+    .team_bg_mobile {
+        background-image: url(../public/img/Decorations Team Mobile.png);
+        @apply bg-no-repeat bg-bottom bg-cover;
+    }
+    .team_bg_desktop {
+        background-image: url(../public/img/Decorations Team.png);
+    }
+}
+
 @layer components {
     .container {
         @apply mx-auto max-w-full px-5 md:px-6 xl:max-w-[1280px];
@@ -40,9 +50,9 @@ body {
     }
 
     .heading_md {
-        @apply uppercase font-syncopate font-bold text-3xl tracking-wider;
+        @apply uppercase font-syncopate font-bold text-2xl md:text-3xl tracking-wider;
     }
     .spacing_p {
-        @apply uppercase text-xs tracking-[6px] text-[#EFEFFD];
+        @apply uppercase text-xs tracking-[6px] leading-6 text-[#EFEFFD];
     }
 }
