--- a/styles/globals.css
+++ b/styles/globals.css
@@ -30,6 +30,25 @@ body {
     }
     .team_bg_desktop {
         background-image: url(../public/img/Decorations Team.png);
+        background-size: 100%;
+        @apply bg-no-repeat bg-center;
+    }
+    .backer_bg_mobile {
+        background-image: url(../public/img/deco bakey by mobile.png);
+        background-size: 100%;
+        @apply bg-no-repeat bg-bottom;
+    }
+    .backer_bg_desktop {
+        background-image: url(../public/img/deco baked by.png);
+        background-size: 100%;
+        @apply bg-no-repeat bg-center;
+    }
+    .grid_col_1_3 {
+        grid-column: 1/3;
+    }
+
+    .grid_col_unset {
+        grid-column: unset;
     }
 }
 
